--- a/components/footer.html
+++ b/components/footer.html
@@ -1,1 +1,23 @@
 <!-- Footer Component -->
+
+<html>
+  <head>
+    
+  </head>
+
+
+    <style>
+      footer {
+        background-color: rgba(0, 0, 0, 0.7);
+          color: white;
+          text-align: center;
+          padding: 10px;
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      }
+    </style>
+
+
+    <footer>
+      <p>&copy; 'Bos in Boston. All rights reserved.</p>
+    </footer> 
+</html>
