--- a/components/navbar.html
+++ b/components/navbar.html
@@ -71,8 +71,8 @@
       <li>
         <a href="">Services Offered</a>
         <div class="services-dropdown">
-          <a href="">Services</a>
-          <a href="">Destination Guides</a>
+          <a href="../pages/services-offered.html">Services</a>
+          <a href="../pages/destination-guides.html">Destination Guides</a>
         </div>
       </li>
       <li><a href="">Travel Resources</a></li>
