--- a/components/navbar.html
+++ b/components/navbar.html
@@ -64,7 +64,7 @@
       <li>
         <a href="../index.html"
           ><img
-            src="https://github.com/jpuka01/cs20-midterm/blob/main/assets/logo.png?raw=true"
+            src="../assets/img/logo.png"
             alt="Logo"
         /></a>
       </li>
