--- a/styles/index.css
+++ b/styles/index.css
@@ -1,35 +1,34 @@
 /* index.css --> Contains the global variables, styles, and :root selector */
 
+/* Google Fonts - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Defines a custom font imported from Dafont - Wanderlust */
 @font-face {
     font-family: 'Wanderlust';
     src: url('../assets/fonts/Wanderlust.ttf') format('truetype');
 }
 
-/* Google Fonts - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 :root {
     /* Colors */
     --coral-peach: #FA8072;
-    --turquoise: #008080;
+    --turquoise: #40e0d0;
     --off-white: #f5f5f5;
 
     /* Font family */
     --primary-font: 'Wanderlust';
-    --secondary-font: 'Arial';
+    --secondary-font: 'Poppins', sans-serif;
 
-    
     /* Font sizes - Desktop */
-    --fs-small: 0.75rem;
-    --fs-medium: 1rem;
-    --fs-large: 1.25rem; 
+    --fs-small: 1rem;
+    --fs-medium: 2.25rem;
+    --fs-large: 3.25rem; 
     --fs-header: 6.375rem; 
 
     /* Font sizes - Mobile */
-    --fsm-small: 0.625rem;
-    --fsm-medium: 0.875rem;
-    --fsm-large: 1.125rem;
+    --fsm-small: 0.875rem;
+    --fsm-medium: 1.33rem;
+    --fsm-large: 2.125rem;
     --fsm-header: 3.75rem; 
 }
 
@@ -38,9 +37,28 @@ h1 {
     font-size: var(--fs-header);
 }
 
+h2 {
+    font-family: var(--primary-font);
+    font-size: var(--fs-header);
+}
+
+p {
+    font-family: var(--secondary-font);
+    font-size: var(--fs-medium);
+}
+
 /* Mobile Version */
 @media (max-width: 768px) {
     h1 {
         font-size: var(--fsm-header);
+    }
+    h2 {
+        font-size: var(--fsm-header);
+    }
+    h3 {
+        font-size: var(--fsm-medium);
+    }
+    p {
+        font-size: var(--fsm-medium);
     }
 }
