--- a/components/footer.html
+++ b/components/footer.html
@@ -14,10 +14,23 @@
           padding: 10px;
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       }
+
+      .hoover-link {
+      text-decoration:none;
+      padding: 5px 5px;
+      transition: border 0.3s, solor 0.3s;
+    }
+    .hoover-link:hover {
+      border: 2px solid #FA8072;
+      color: #FA8072;
+      border-radius: 4px;
+      display: inline-block;
+    }
     </style>
 
 
     <footer>
       <p>&copy; 'Bos in Boston. All rights reserved.</p>
+      <p> Get in Touch: <a href="/pages/contact.html" class="hoover-link"> Contact Us</a></p>
     </footer> 
 </html>
