--- a/styles/blog-travel-resources.css
+++ b/styles/blog-travel-resources.css
@@ -6,7 +6,9 @@
     src: url('../assets/fonts/Wanderlust.ttf') format('truetype');
 }
 
-
+body{
+  padding-top: 60px;
+}
 
 * {
         margin: 0;
@@ -28,11 +30,12 @@ footer {
         margin-top: 50px;
         background-color: #40e0d0ca;
         padding: 4px 16px;
+        margin-top: 100px;
 }
 .main_header{
         display: flex;
         width: 100%;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         flex-direction: column;
 }
@@ -46,16 +49,18 @@ footer {
         background-position: center;
         border: 4px solid rgba(64, 224, 208, 0.5);
         margin-top: 50px;
+        margin-bottom: 50px;
 }
 
 .navbar {
-        /*position: fixed;*/
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         background-color: #40e0d0;
         padding: 10px;
         font-family: Arial, sans-serif;
+        display: flex;
       }
       ul#nav {
         list-style-type: none;
@@ -99,3 +104,4 @@ footer {
         display: block;
         font-size: 15px;
       }
+
