--- a/components/navbar.html
+++ b/components/navbar.html
@@ -36,6 +36,9 @@
       color: #ffffff;
       font-weight: 600;
     }
+    ul#nav li a:hover {
+      color: #FA8072;
+    }
     .services-dropdown {
       display: none;
       position: absolute;
