--- a/styles/index.css
+++ b/styles/index.css
@@ -32,6 +32,10 @@
     --fsm-header: 3.75rem; 
 }
 
+body {
+    padding-top: 20px;
+}
+
 h1 {
     font-family: var(--primary-font);
     font-size: var(--fs-header);
