--- a/components/navbar.html
+++ b/components/navbar.html
@@ -8,98 +8,238 @@
     <link rel="icon" href="../assets/img/favicon.png" type="image/png" />
     <link rel="stylesheet" href="../styles/index.css" />
     <title>Navbar</title>
-  </head>
+  
   <style>
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
     .navbar {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       background-color: var(--turquoise);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       padding: 10px;
-      font-family: Arial, sans-serif;
+      font-family: var(--secondary-font);
+      z-index: 1000;
     }
+
+    .navbar a {
+      text-decoration: none;
+    }
+
+    .logo {
+      font-size: var(--fs-header);
+      color: var(--coral-peach);
+      margin: 0;
+      padding: 0;
+      line-height: 1;
+    }
+
+    .logo:hover {
+      color: var(--off-white);
+    }
+
+    .nav-container {
+      display: flex;
+      align-items: center;
+    }
+
     ul#nav {
-      list-style-type: none;
-      font-size: 25px;
-      margin: 0px;
+      list-style: none;
+      display: flex;
+      font-size: var(--fs-medium);
+      margin: 0;
       padding: 5px;
+      gap: 30px;
     }
+
     ul#nav li {
       display: inline-block;
       margin-right: 50px;
       position: relative;
       line-height: 50px;
+      text-decoration: none;
+      color: var(--coral-peach);
+      font-weight: 600;
+      text-shadow: 
+        1px 1px 0 #000000, 
+        -1px -1px 0 #000000, 
+        1px -1px 0 #000000,
+        -1px 1px 0 #000000;
     }
+
+    ul#nav li:hover {
+      color: var(--off-white);
+    }
+
     ul#nav li img {
       height: 50px;
       width: auto;
       vertical-align: middle;
     }
-    ul#nav li {
-      text-decoration: none;
-      color: #ffffff;
-      font-weight: 600;
-    }
+
     ul#nav li a {
       text-decoration: none;
-      color: #ffffff;
-      font-weight: 600;
-    }
-    ul#nav li a:hover {
       color: var(--coral-peach);
+      font-weight: 600;
+      align-items: center;
     }
+
+    ul#nav li a:hover {
+      color: var(--off-white);
+    }
+
     .dropdown {
-      display: none;
+      visibility: hidden;
       position: absolute;
       background-color: var(--turquoise);
       padding: 10px;
-      min-width: 100%;
+      min-width: 200px;
       box-sizing: border-box;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      left: 50%; 
+      transform: translateX(-50%) translateY(-10px);
+      opacity: 0;
+      border-radius: 15px;
+      transition: opacity 0.3s ease, transform 0.3s ease;
     }
+
     .dropdown a {
       display: block;
       padding: 5px 10px;
       text-decoration: none;
+      white-space: nowrap;
     }
+
     .dropdown a:hover {
       background-color: var(--turquoise);
     }
+
     ul#nav li:hover .dropdown {
-      display: block;
-      font-size: 15px;
+      visibility: visible;
+      font-size: var(--fs-small);
+      opacity: 1;
+      transform: translateX(-50%) translateY(0);
     }
+
+    /* Hamburger - Mobile */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      position: relative;
+      margin-left: 10px;
+      z-index: 1001;
+    }
+
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background-color: var(--coral-peach);
+      margin: 4px 0;
+      transition: 0.4s;
+    }
+
+    @media (max-width: 768px) {
+        .logo { 
+          font-size: var(--fsm-header);
+        }
+        .nav-container {
+          display: none;
+          flex-direction: column;
+          width: 100%;
+        }
+
+        .navbar {
+          justify-content: space-between;
+          padding: 10px;
+        }
+
+        .hamburger {
+          display: flex;
+          margin-left: 0;
+        }
+
+        .nav-container.active {
+          display: flex;
+        }
+
+        ul#nav {
+          font-size: var(--fsm-medium);
+          flex-direction: column;
+          width: 100%;
+          padding: 0;
+        }
+
+        ul#nav li {
+          margin: 0;
+          width: 100%;
+          text-align: center;
+        }
+
+        .dropdown {
+          position: static;
+          transform: none;
+          opacity: 1;
+        }
+
+        ul#nav li:hover .dropdown {
+          position: static;
+          transform: none;
+          opacity: 1;
+        }
+      }
   </style>
-  <!-- Fixed Navbar -->
+</head>
+
+<body>
   <div class="navbar">
-    <!-- Nav Menu -->
-    <ul id="nav">
-      <li>
-        <a href="../pages/index.html"
-          ><img src="../assets/img/logo.png" alt="Logo"
-        /></a>
-      </li>
-      <li>
-        Services Offered
-        <div class="dropdown">
-          <a href="../pages/services-offered.html">Services</a>
-          <a href="../pages/destination-guides.html">Destination Guides</a>
-        </div>
-      </li>
-      <li>Other Resources
-        <div class="dropdown">
-          <a href="../pages/FAQ.html">FAQ</a>
-          <a href="../pages/blog-client-testimonials.html">Testimonals</a>
-          <a href="../pages/travel-resources.html">Travel Resources</a>
-        </div>
-      </li>
-      <li>
-        More Information
-        <div class="dropdown">
-          <a href="../pages/about.html">About</a>
-          <a href="../pages/contact.html">Contact Us</a>
-        </div>
-      </li>
-    </ul>
+    <a href="../pages/index.html">
+      <h1 class="logo">'Bos in Boston</h1>
+    </a>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="nav-container">
+      <ul id="nav">
+        <li>
+          Offerings
+          <div class="dropdown">
+            <a href="../pages/services-offered.html">Services</a>
+            <a href="../pages/destination-guides.html">Destination Guides</a>
+          </div>
+        </li>
+        <li>
+          Resources
+          <div class="dropdown">
+            <a href="../pages/FAQ.html">FAQ</a>
+            <a href="../pages/blog-client-testimonials.html">Testimonials</a>
+            <a href="../pages/travel-resources.html">Travel Guide</a>
+          </div>
+        </li>
+        <li>
+          Discover
+          <div class="dropdown">
+            <a href="../pages/about.html">About Us</a>
+            <a href="../pages/contact.html">Contact Us</a>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
+  <script>
+    function toggleMenu() {
+      const navContainer = document.querySelector('.nav-container');
+      navContainer.classList.toggle('active');
+    }
+  </script>
+</body>
 </html>
