--- a/styles/destination-guides.css
+++ b/styles/destination-guides.css
@@ -17,13 +17,19 @@ h1 {
 .content {
     margin-top: 120px;
 }
+.map-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
 #map {
-    height: 500px;
-    width: 100%;
+    height: 700px;
+    width: 80%;
     border-radius: 10px;
     border: 4px solid var(--coral-peach);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 20px 0;
+    margin: 0 auto;
 }
 .container {
     width: 100%;
@@ -64,9 +70,11 @@ h1 {
 .section {
     flex-direction: row;
 }
-
 .section-reverse {
     flex-direction: row-reverse;
+}
+.text p {
+    font-size: var(--fs-small);
 }
 
 /* Mobile Version */
