--- a/styles/destination-guides.css
+++ b/styles/destination-guides.css
@@ -15,18 +15,19 @@ h1 {
     justify-content:center;
 }
 .content {
-    margin-top: 120px;
+    margin-top: 80px;
+    padding-top: 20px;
 }
 .map-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 5px;
 }
 #map {
-    height: 700px;
-    width: 80%;
-    border-radius: 10px;
+    height: 600px;
+    width: 70%;
+    border-radius: 15px;
     border: 4px solid var(--coral-peach);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin: 0 auto;
