--- a/components/footer.html
+++ b/components/footer.html
@@ -1,36 +1,61 @@
 <!-- Footer Component -->
 
-<html>
-  <head>
-    
-  </head>
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Footer</title>
+    <link rel="icon" href="../assets/img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../styles/index.css">
     <style>
+      * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+        }
       footer {
-        background-color: rgba(250, 128, 114, 0.7);
-          color: white;
-          text-align: center;
-          padding: 10px;
-        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        background-color: var(--coral-peach);
+        color: var(--turquoise);
+        text-align: center;
+        padding: 15px;
+        font-family: var(--secondary-font);
       }
-
+      footer p {
+        font-size: 1.75rem;
+        padding: 5px;
+      }
       .hoover-link {
-      text-decoration:none;
-      padding: 5px 5px;
-      transition: border 0.3s, solor 0.3s;
-    }
-    .hoover-link:hover {
-      border: 2px solid #FA8072;
-      color: #FA8072;
-      border-radius: 4px;
-      display: inline-block;
-    }
+        text-decoration:none;
+        padding: 5px 5px;
+        transition: border 0.3s, solor 0.3s;
+      }
+      button {
+        border: 2px solid var(--turquoise);
+        background-color: var(--turquoise);
+        cursor: pointer;
+        border-radius: 6px;
+        font-size: var(--fs-small);
+        padding: 5px;
+        color: var(--off-white);
+      }
+      button:hover {
+        background-color: var(--coral-peach);
+        color: var(--turquoise);
+      }
+      button a {
+        color: inherit; 
+        text-decoration: none;
+      }
+      button a:hover {
+        color: var(--turquoise);
+      }
     </style>
+  </head>
 
 
     <footer>
       <p>&copy; 'Bos in Boston. All rights reserved.</p>
-      <p> Get in Touch: <a href="/pages/contact.html" class="hoover-link"> Contact Us</a></p>
+      <button><a href="/pages/contact.html" class="hoover-link"> Contact Us</a></button>
     </footer> 
 </html>
