--- a/styles/blog-travel-resources.css
+++ b/styles/blog-travel-resources.css
@@ -78,15 +78,39 @@ body{
 }
 
 footer {
-        background-color: rgba(250, 128, 114, 0.7);
-          color: white;
-          text-align: center;
-          padding: 10px;
-        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        background-color: var(--coral-peach);
+        color: var(--turquoise);
+        text-align: center;
+        padding: 15px;
+        font-family: var(--secondary-font);
+}
+footer p {
+        font-size: 1.75rem;
+        padding: 5px;
+}
+button {
+        border: 2px solid var(--turquoise);
+        background-color: var(--turquoise);
+        cursor: pointer;
+        border-radius: 6px;
+        font-size: var(--fs-small);
+        padding: 5px;
+        color: var(--off-white);
+}
+button:hover {
+        background-color: var(--coral-peach);
+        color: var(--turquoise);
+}
+button a {
+        color: inherit; 
+        text-decoration: none;
+}
+button a:hover {
+        color: var(--turquoise);
 }
 
 
-button{
+#button{
         position: absolute;
         top: 50%;
         background-color: rgba(255, 255, 255, 0.7);
