--- a/styles/blog-travel-resources.css
+++ b/styles/blog-travel-resources.css
@@ -126,10 +126,19 @@ button a:hover {
         background-size: cover;
         background-position: center;
         border: 4px solid rgba(64, 224, 208, 0.5);
-        margin-top: 10px;
-        
+        margin-top: 10px;       
 }
 
+#image2{
+        width: 1000px;
+        height: 600px;
+        display: flex;
+        background-size: cover;
+        background-position: center;
+        border: 4px solid rgba(64, 224, 208, 0.5);
+        margin-top: 15px;  
+        margin-left: 250px;   
+}
 
 #title{
         font-family: var(--primary-font);
@@ -143,6 +152,7 @@ button a:hover {
         margin-top: 75px;
         background-color: rgba(64, 224, 208, 0.4);
         padding: 4px 16px;
+        text-align: center;
 }
 
 #subheading{
@@ -150,7 +160,6 @@ button a:hover {
   color: var(--coral-peach);  
   text-align: center;
   margin: 25px 100px 25px 100px;
-
   font-family: var(--primary-font);
         font-size: var(--fs-medium);
         text-shadow: 
