--- a/components/navbar.html
+++ b/components/navbar.html
@@ -34,7 +34,7 @@
       }
 
     .logo {
-      font-size: var(--fs-header);
+      font-size: 6.15em;
       color: var(--coral-peach);
       margin: 0;
       padding: 0;
